k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    component: app-deployment
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      component: app-deployment
  template:
    metadata:
      labels:
        component: app-deployment
    spec:
      containers:
        - name: app-deployment
          image: tannguyenit/bsm-app-service
          resources:
            requests:
              cpu: 200m # The container requests 200 millicores (that is, 1/5 of a single CPU core’s time).
              memory: 10Mi # The container also requests 10 mebibytes of memory.
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    component: app-deployment
  ports:
    - port: 80
      targetPort: 80
