k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: bsm.microservice.local
    http:
      paths:
      # - path: /payment
      #   backend:
      #     serviceName: payment-service
      #     servicePort: 80
      - path: /app/(.*)
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 80
      - path: /user/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
